- Fixed a problem where the Complete Word popup would not be closed
  under some circumstances.
- "Unsplit Current" command no longer changes the divider location to
  zero.
- "Copy Append to Register" and "Cut Append to Register" commands would
  throw NullPointerExceptions when appending to a register that didn't
  exist. The correct behavior is to put the selected text in the
  register.

+ API Changes

- Macros.Handler.accept() now takes a path name, not a file name. This
  should not affect existing plugins since none that I know of
  override this method.

* Version 4.1pre5

Thanks to Axel Biernat, Chris Petersen, Eric Benoit, Fan Ho Yin, Kris
Kopicki, Marco Gotze, Ollie Rutherfurd, and Steve Snider for
contributing to this release.

+ Syntax Highlighting Changes:

- Added NQC syntax highlighting (Fan Ho Yin)
- Added Ruby-HTML syntax highlighting (Eric Benoit)
- Added Pike syntax highlighting (Marco Gotze)
- Updated C-Sharp syntax highlighting (Ollie Rutherfurd)
- Updated Perl syntax highlighting (Chris Petersen)
- Updated PL-SQL syntax highlighting (Steve Snider)
- Updated CSS syntax highlighting (Axel Biernat)
- The "More accurate syntax highlighting" option is no longer. When it
  was on, it would do the following:

  - Cause the buffer to be parsed entirely by the syntax engine when
    first loaded.
  - When parsing a line for syntax tokens, it would scan back to the
    start of the buffer looking for a line with valid syntax info,
    instead of only looking 100 lines back.

  However, the second made the first unnecessary, and with the first
  behavior gone, the performance hit is not noticable. So this option is
  now effectively always on.

+ Global Options Dialog Changes:

- The tool bar option pane now has an "Edit" button for modifying the
  currently selected tool bar entry.
- Now org.gjt.sp.jedit.gui.OptionsDialog is an abstract class, with a
  concrete org.gjt.sp.jedit.options.GlobalOptions subclass with the